$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.18-15 (opened November 1, 2010)

	* prc: coefficients folded in a wrong way. Diagnosed, reported and
	fixed by Cajo ter Braak.

Version 1.18-14 (closed November 1, 2010)

	* treedist: works now with zero-height trees (for instance, only
	one item in a tree).  Function gained a new argument 'relative'
	(defaults TRUE): if FALSE, finds raw dissimilarities of tree
	heights.  Help page now tells that tree distances are in range
	0..2 instead of 0..1, since combining two trees may add a new
	common root.

	* isomap: returns only axes associated with positive eigenvalues.

	* wcmdscale: give two goodness of fit statistics for 'k' axes: one
	is for the real part and based on the sum of positive eigenvalues,
	and second is for all axes and based for the sum of absolute
	values of all eigenvalues.

	* summary.eigenvals: handle now possible negative eigenvalues from
	capscale() or wcmdscale(): cumulative sum and proportions are now
	based on the sum of absolute values of eigenvalues, and all real
	eigenvalues explain less than 100% if there are negative
	eigenvalues.

Version 1.18-13 (closed October 15, 2010)

	* anova.cca(..., by = "axis"): now really uses marginal tests for
	every axis. Significance of axis k with LC scores lc is from model
	update(object, . ~ lc[,k] + Condition(lc[,-k])). That is, That is,
	axis k is used as constraint and all other axes as conditions,
	when axis k is analysed. This also solves the failure of
	anova(..., by = "ax") of rda(dune ~ poly(pH, 2) + Baresoil,
	varechem) of PR#945, but no other problems of the same report.

	* treedive: handles trivial cases of zero (diversity NA) or one
	species (diversity 0). 

	* oecosimu: handles NA values as na.rm = TRUE in simulations for
	cases where these are produced by the function to evaluate
	statistics.

	* oecosimu: takes care that the statistic is evaluated with binary